Fix slider 2 z-index

--- a/secondthought-widgets/secondthought-slider-widget-2/styles/secondthought-slider-widget-2-style.scss
+++ b/secondthought-widgets/secondthought-slider-widget-2/styles/secondthought-slider-widget-2-style.scss
@@ -13,7 +13,9 @@
   .slide {
     position: relative;
     z-index: -1;
-
+    &.slick-current {
+      z-index: 1;
+    }
     background-size: cover;
     background-position: center;
 
